@@ -9,7 +9,7 @@ package org.openxava.actions;
 
 public class ReturnPreviousModuleAction extends BaseAction implements IChangeModuleAction {
 
-	private boolean reinit = false; // tmr En changelog
+	private boolean reinit = false; 
 	
 	public void execute() throws Exception {
 	}
@@ -19,14 +19,15 @@ public class ReturnPreviousModuleAction extends BaseAction implements IChangeMod
 	}
 
 	public boolean hasReinitNextModule() { 
-		// tmr return false;
-		return reinit; // tmr
+		return reinit; 
 	}
 
+	/** @since 7.4.2 */
 	public boolean isReinit() {
 		return reinit;
 	}
 
+	/** @since 7.4.2 */
 	public void setReinit(boolean reinit) {
 		this.reinit = reinit;
 	}
