@@ -191,8 +191,7 @@
 		<model name="Invoice"/>				<view name="ActiveYear"/> 
 		<tab name="ActiveYear"/>
 		<controller name="Typical"/>	
-		<!-- tmr ini -->		<controller name="ReturnPreviousModuleWithReinit"/>		<!-- tmr fin -->
-	</module>		<module name="InvoiceListManyTypes" folder="invoicing.variations">		<model name="Invoice"/>				<tab name="ManyTypes"/>		<controller name="Typical"/>	</module>	
+		<controller name="ReturnPreviousModuleWithReinit"/>	</module>		<module name="InvoiceListManyTypes" folder="invoicing.variations">		<model name="Invoice"/>				<tab name="ManyTypes"/>		<controller name="Typical"/>	</module>	
 	<module name="InvoiceNestedSections" folder="invoicing.variations">
 		<model name="Invoice"/>
 		<view name="NestedSections"/>		<controller name="InvoiceNestedSections"/>
