@@ -314,11 +314,9 @@
 			<use-object name="xava_view"/>
 			<use-object name="xavatest_activeYear"/>
 		</action>
-		<!-- tmr ini -->		
 		<action name="goInvoiceActiveYear" class="org.openxava.actions.ChangeModuleAction">
 			<set property="nextModule" value="InvoiceActiveYear"/>
 		</action>		
-		<!-- tmr fin -->
 	</controller>
 		
 	<controller name="SellerJSP">
@@ -1383,13 +1381,11 @@
 		<action name="return" class="org.openxava.actions.ReturnPreviousModuleAction"/>
 	</controller>
 	
-	<!-- tmr ini -->
 	<controller name="ReturnPreviousModuleWithReinit">
 		<action name="return" class="org.openxava.actions.ReturnPreviousModuleAction">
 			<set property="reinit" value="true"/>
 		</action>
 	</controller>	
-	<!-- tmr fin -->
 	
 	<controller name="ColorM1">
 		<action name="changeModule2" 
